[package]
name = "jprops"
version = "0.1.0"
edition = "2021"
author = ["eulegang <eulegang@eulegang.dev>"]
license = "MIT"
description = "reading property file in rust"
repository = "https://github.com/eulegang/jprops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.7.1"
thiserror = "1.0.58"
